src/objects/Google_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Key__c</fullName>
        <label>Developer Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <label>Folder Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scopes__c</fullName>
        <label>Scopes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Account_Id__c</fullName>
        <label>Service Account Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <type>TextArea</type>
    </fields>
    <label>Google Settings</label>
</CustomObject>